# contentman

./: .gitignore  README.md  pyproject.toml
contentman/: README.md  runner.py
contentman/contents/: README.md  commands.py  contentful.py  models.py  serializer.py  translation.py
tests/: test_contentman.py
