[tool.poetry]
name = "contentman"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django-environ = "^0.9.0"
click = "^8.1.3"
contentful-management = "^2.11.0"
contentful = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"
black = "^22.10.0"
isort = "^5.10.1"
pyproject-flake8 = "^6.0.0"
flake8-black = "^0.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
